# ocaml_libgen

./: README  dune-project  libgen.opam
lib/: dune  libgen.ml  libgen_stubs.c
test/: dune  test_libgen.ml
